# DNVGLPyFramework

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  my_version.py  release.sh  requirements.txt  setup.cfg  setup.py  tox.ini
CI/: ci_run.sh
dnvgl/: __init__.py
dnvgl/framework/: __init__.py  app.py  dict.py  idgen.py  logger.py
dnvgl/framework/test/: test_app.py  test_dicts.py  test_idgen.py
dnvgl/platform_utils/: __init__.py  __version__.py
dnvgl/setup_utils/: __init__.py  build_exe.py  version.py
dnvgl/setup_utils/test/: __init__.py  test_version.py
doc/: Makefile  api.rst  conf.py  extapi.py  gen-png-logos.sh  index.rst  intro.rst  platform_utils.rst  setup_utils.rst
doc/_static/: custom.css
lib/dnvgl/framework/: cached_property.py  dict.py  idgen.py
lib/dnvgl/framework/test/: test_app.py
lib/dnvgl/platform_utils/: __init__.py
lib/dnvgl/setup_utils/: build_exe.py  version.py
lib/dnvgl/setup_utils/test/: test_version.py
src/dnvgl_framework/test/: test_.py  test_app.py  test_dicts.py
src/framework/: dict.py
src/framework/test/: __init__.py  test_idgen.py
src/glframework/: __init__.py  app.py  idgen.py  logger.py
src/glframework/test/: glframework.app_test.py  test_idgen.py
src/tribon/util/: __init__.py  app.py  circle.py  idgen.py  planecheck.py
tc_sripts/: install_prerequisite.sh
test/: Makefile  __generic_test_.py  gen_py_dep.py  glframework.__init___test.py  glframework.app_test.py  glframework.idgen_test.py  glframework.planecheck_test.py  tribon.util.__init___test.py  tribon.util.circle_test.py  tribon.util.idgen_test.py  tribon.util.planecheck_test.py
