# -*- coding: utf-8 -*-

[metadata]

license = Other/Proprietary License
keywords = DNVGL Framework setup helper
description=Lightweight framwork for DNV GL Python applications.
author = Berthold Höllmann, DNV GL SE
author_email = berthold.hoellmann@dnvgl.com
url = http://www.dnvgl.com
platforms =
    Linux
    Windows
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3

[wheel]

universal = 1

[aliases]

test=pytest

[tool:pytest]

minversion = 3.0
addopts = --verbose --verbose --verbose
        --cov-config .coveragerc
        --cov dnvgl
        --cov-report term-missing
        --cov-report html
        --cov-report xml
        --cov-report annotate
        --doctest-modules
        --capture=no
        --junitxml=pytest_main.xml
        --pep8
        --ignore=doc
        --ignore=build_exe
        --ignore=.svn
        --ignore=.venv
        --ignore=data
        --ignore=htmlcov
        --ignore=__pycache__

[isort]

indent='    '
multi_line_output=4
length_sort=1
default_section=FIRSTPARTY
balanced_wrapping=True
import_heading_stdlib=Standard libraries.
import_heading_thirdparty=Third party libraries.
import_heading_firstparty=DNV GL libraries.
known_standard_library=
        setuptools
        cmath
        stat
        types
        strop
        _locale
known_third_party=
        PyInstaller
known_first_party=
        gl
        BasePyBrush
        StiffOnPlate
        dnvgl
        hcm
        readais
        numdiff
        _shipLoad
        _spsolve
        numfort
        amls_helper
        priefaslib
        SXFPyBase
        iuw
force_to_top=
        setuptools
use_parentheses=1

# Local Variables:
# mode: conf
# compile-command: "python setup.py test"
# End:
